--- a/index.html
+++ b/index.html
@@ -38,8 +38,8 @@
             spend the weekend <a href="">crafting an NFT</a> and by this time
             next week, you'll be a millionaire.
           </p>
-          <a class="buy-btn" id="hovereff">Buy NFTs</a>
-          <a class="info-btn" id="hovereff">More Info</a>
+          <a class="format-btn buy-btn" id="hovereff">Buy NFTs</a>
+          <a class="format-btn info-btn" id="hovereff">More Info</a>
         </div>
       </section>
 
@@ -69,8 +69,8 @@
             Still not convinced? To be honest, nor are we. That's why we're
             selling them, not buying them.
           </p>
-          <a class="about-btn" id="hovereff">About Us</a>
-          <a class="contact-btn" id="hovereff">Contact Us</a>
+          <a class="format-btn about-btn" id="hovereff">About Us</a>
+          <a class="format-btn contact-btn" id="hovereff">Contact Us</a>
         </div>
       </section>
     </main>
